--- a/AppServer/Cargo.toml
+++ b/AppServer/Cargo.toml
@@ -2,8 +2,7 @@
 name = "garage-tools"
 version = "0.1.0"
 authors = ["Edwin Amsler <edwinguy@gmail.com>"]
+edition = "2021"
 
 [dependencies]
-rocket = "0.2.2"
-rocket_codegen = "0.2.2"
-
+rocket = "0.4.10"
